--- a/ITEvents/Pages/Events.xaml
+++ b/ITEvents/Pages/Events.xaml
@@ -67,6 +67,6 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button x:Name="btnCreatEvent" Content="Создать" Grid.Row="3" Grid.Column="2" Visibility="Hidden"/>
+        <Button x:Name="btnCreatEvent" Content="Создать" Grid.Row="3" Grid.Column="2" Visibility="Hidden" Click="btnCreatEvent_Click"/>
     </Grid>
 </Page>
